--- a/package.json
+++ b/package.json
@@ -2,18 +2,27 @@
   "name": "pokemon-back",
   "version": "1.0.0",
   "description": "",
-  "main": "dist/",
+  "main": "index.js",
   "scripts": {
     "start": "node .",
     "build": "tsc",
-    "build:dev": "tsc --watch"
+    "build:dev": "tsc --watch",
+    "prepare": "husky"
   },
-
   "keywords": [],
   "author": "",
   "license": "ISC",
   "type": "commonjs",
   "devDependencies": {
-    "typescript": "^5.8.3"
+    "@commitlint/cli": "^19.8.0",
+    "@commitlint/config-conventional": "^19.8.0",
+    "@eslint/js": "^9.24.0",
+    "eslint": "^9.24.0",
+    "globals": "^16.0.0",
+    "husky": "^9.1.7",
+    "lint-staged": "^15.5.1",
+    "prettier": "3.5.3",
+    "typescript": "^5.8.3",
+    "typescript-eslint": "^8.29.1"
   }
 }
