--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,7 @@
     "noImplicitAny": true,
     "skipLibCheck": true,
     "strictNullChecks": true,
-    "sourceMap": true,
+    "sourceMap": true
   },
   "include": ["src/**/*.ts"]
 }
