--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@commitlint/config-conventional": "^19.8.0",
     "@eslint/js": "^9.24.0",
     "@types/jest": "^29.5.14",
+    "@types/morgan": "^1.9.9",
     "eslint": "^9.24.0",
     "globals": "^16.0.0",
     "husky": "^9.1.7",
@@ -36,6 +37,7 @@
     "@types/express": "^5.0.1",
     "chalk": "^5.4.1",
     "express": "^5.1.0",
+    "morgan": "^1.10.0",
     "uuid": "^11.1.0"
   }
 }
